--- a/27072021/index.html
+++ b/27072021/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Script2</h1>
-    <script src="/ejercicio1.js"></script>
+    
+    <!-<script src="/ejercicio1.js"></script>-->
+    
+    <script src="/ejercicio2.js"></script>
 </body>
 </html>
