--- a/27072021/index.html
+++ b/27072021/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Script2</h1>
+
+    <button id="for">For</button>
     
     <!-<script src="/ejercicio1.js"></script>-->
     
