--- a/27072021/TallerWhilecapitales/Departamentos.html
+++ b/27072021/TallerWhilecapitales/Departamentos.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Web Turoial Guru - Online Quiz</title>
-        <link rel="stylesheet" href="/assets/CSS/Estilos.css">
+        <link rel="stylesheet" href="./assets/CSS/Estilos.css">
     </head>
     <body>
       <div class="box">
@@ -25,5 +25,5 @@
         </div>
       </div>
     </body>
-    <script src="/assets/JS/script.js"></script>
+    <script src="./assets/JS/script.js"></script>
 </html>
